data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4369.wast
;; 8. **Test Description**:    - Create a program where `br_if` controls whether an operand required by `call_indirect` performs according to the operand stack's current condition. The test validates `br_if`'s role in ensuring adequate operand handling.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func $br_if_operand_stack
      (block
        (br_if 0 (i32.eqz (i32.const 1)))
        (call_indirect (type 0) (i32.const 0))
      )
    )
  )
  "type mismatch"
)